capability upgrade, item / item provider upgrade